Добавил активити "Группы". Поменял таблицы на листы (ListView)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">AndroidIsaev</string>
     <string name="action_settings">Settings</string>
     <string name="gpa">Общая оценка:</string>
+    <string name="groups">Группы</string>
+    <string name="students">Студенты</string>
 </resources>
